--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,11 @@ build/
 # unless supporting rvm < 1.11.0 or doing something fancy, ignore this:
 .rvmrc
 
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
 # Mac OS X
 .DS_Store
